# cmake-template

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  hello_world.cc
cmake/: TEMPLATE_PROJECT_config.cmake
include/TEMPLATE_PROJECT/: CMakeLists.txt  test.h
lib/: CMakeLists.txt  test.cc
